Modified Signup endpoint, added jwt token generation (#12)
