# models/response.go
@@ -1,0 +1,6 @@
+package models
+
+type SignUpRes struct {
+	AuthToken string `json:"authToken"`
+	Email     string `json:"email"`
+}
